on clicking each id respective form should be opened in the edit mode
SVN-Revision: 28124

--- a/software/DynamicExtentions/src/resources/velocityTemplates/displayFormDataInGridTemplate.vm
+++ b/software/DynamicExtentions/src/resources/velocityTemplates/displayFormDataInGridTemplate.vm
@@ -2,10 +2,11 @@
 <rows>
 	#set($srno=1)
 	#foreach( $gridData in $gridPopulateObjectList )
-		<row id="$gridData.identifier">
+		<row id="$gridData.recordEntryId">
 			<cell>$srno</cell>
 			<cell><![CDATA[$gridData.username]]></cell>
 			<cell><![CDATA[$gridData.lastUpdated]]></cell>
+			<cell><![CDATA[$gridData.formURL]]></cell>
 		</row>
 		#set($srno=$srno+1)
 	#end
