--- a/software/DynamicExtentions/src/web/stylesheets/de_style.css
+++ b/software/DynamicExtentions/src/web/stylesheets/de_style.css
@@ -106,3 +106,18 @@ A.set1:hover {color: #c8ac1e; Text-Decoration: none;
 	/*font-size: .75em;*/
 	color: #333333;
 }
+
+.dataSummary-header
+{
+
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 0.9em;
+	color: #000000;
+	border-top: 0.1em solid black;
+	border-bottom:0.1em solid black;
+}
+
+.dataSummary-header td
+{
+	vertical-align: top;
+}
