--- a/software/DynamicExtentions/src/web/stylesheets/de.css
+++ b/software/DynamicExtentions/src/web/stylesheets/de.css
@@ -68,3 +68,8 @@ div.navbar {
 	border-spacing: 0;
 	width: 100%;
 }
+.date-format {
+    color: #999999;
+    font-family: verdana;
+    font-size: 9px;
+}
