Added for CLINPORTAL-7698

--- a/software/DynamicExtentions/src/csd_web/pages/templates/note.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/note.html
@@ -1,5 +1,10 @@
 <div class = "controlHeaders"><label class = 'text_bold'>General Properties</label></div>
 <div class = "propertiesContainer">
+        <div style = 'width: 100%;' class = "propertiesContainerCell" align = left>
+        	<label class = 'text_normal' style="color:red"><I>* Please note that you need to have at least one field after this control.</I></label>
+        </div>
+</div>
+<div class = "propertiesContainer">
 		<div style = 'width: 24%;' class = "propertiesContainerCell" align = right>
 			<label class = 'text_normal'>Note</label>
 		</div>
