--- a/software/DynamicExtentions/src/csd_web/pages/templates/controlTabTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/controlTabTemplate.html
@@ -20,7 +20,7 @@
 				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'note'><img id = 'note' src = 'csd_web/icons/note.png'><br>Note <br>&nbsp;</div></a></li>
 				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'heading'><img id = 'heading' src = 'csd_web/icons/heading.png'><br>Heading <br>&nbsp;</div></a></li>
 				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'subForm'><img id = 'subForm' src = 'csd_web/icons/subForm.png'><br>Sub Form <br>&nbsp;</div></a></li>
-				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'label'><img id = 'label' src = 'csd_web/icons/label.png'><br>Label <br>&nbsp;</div></a></li>	
+				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'label'><img id = 'label' src = 'csd_web/icons/label.png'><br>Separator<br> Label &nbsp;</div></a></li>	
 				<li><a href = '#' class= "link"><div class = 'iconBorder' align = 'center' id = 'pageBreak'><img id = 'pageBreak' src = 'csd_web/icons/pageBreak.png'><br>Page Break <br>&nbsp;</div></a></li>	
 			</ul>
 		</div>
