--- a/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
@@ -135,7 +135,7 @@
 					<input type = 'button' value = 'Add Skip Logic' class = 'button' style = 'width : 70%' id = "addSkipLogicBtn">
 				</div>
 			</div>
-			<div id = "skipLogicTableDiv" align = right style = 'padding : 15px; width : 80%; float : left;'>
+			<div id = "skipLogicTableDiv" align = right style = 'padding : 15px; width : 80%; float : left; height:450px; overflow-y:auto;'>
 				<table id = "skipRulesTable" style = "width: 100%;">
 					<tr id = "skipRulesTableHeader">
 						<td class = "formulaTableHeader text_bold">Operations</td>
@@ -149,7 +149,7 @@
 			
 		</div>
 		<div id="calculatedAttributeTab" style = 'padding : 15px; width : 80%'>
-			<div align = right>
+			<div align = right style = 'height:600px; overflow-y:auto;'>
 				<label class = 'text_normal'>Select Field to Apply Auto Calculation</label>
 				<select id = 'availableFields1' class = 'textBox' style = 'width : 60%;' title = " "></select>
 			</div>
