--- a/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
@@ -149,7 +149,7 @@
 			
 		</div>
 		<div id="calculatedAttributeTab" style = 'padding : 15px; width : 80%'>
-			<div align = right style = 'height:600px; overflow-y:auto;'>
+			<div align = right >
 				<label class = 'text_normal'>Select Field to Apply Auto Calculation</label>
 				<select id = 'availableFields1' class = 'textBox' style = 'width : 60%;' title = " "></select>
 			</div>
@@ -169,7 +169,7 @@
 			</div>
 			<div align = right style = 'width: 100% ;float : left;' ><br><br><br></div>
 			<div align = right style = 'width: 100%;float : left;' >
-				<table id = "formulaTable" style = "width: 100%;">
+				<table id = "formulaTable" style = "width: 100%;height:600px; overflow-y:auto;">
 					<tr id = "formulaTableHeader">
 						<td class = "formulaTableHeader text_bold">Operations</td>
 						<td class = "formulaTableHeader text_bold" >Calculated Field</td>
