--- a/software/DynamicExtentions/src/csd_web/pages/templates/pvTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/pvTemplate.html
@@ -13,23 +13,49 @@
 		<input id = 'optionsPerRow' type = 'text' value = '{{optionsPerRow}}' class = 'textBoxSmall'>		
 	</div>
 </div> -->
+<script>
+
+			function getPVFile()
+			{
+				var myCSVString = Main.currentFieldView.getModel().get('pvs');
+				if(JSON.stringify(myCSVString)== '{}')
+				{
+					alert("No Permissible value(s) available for download.");
+				}
+				else
+				{
+					document.getElementById('pvs').value=JSON.stringify(myCSVString); 
+					document.getElementById('pvControlName').value=document.getElementById('controlCaption').value;
+					document.downloadPVForm.action ="ExportPermissibleValueAction.de";
+					document.downloadPVForm.submit();
+				}
+			}
+</script>
 	<div style = 'width: 82%; padding: 3px; margin: 3px;' align = "right">
 		<div id = 'pvGrid' style = 'width : 85%; height : 200px;'>
 		</div>
 		<div id="recinfoArea"></div>
 	</div>
-	<div align = "right" style = 'width: 80%; float: left'>
+	<div align = "right" style = 'width: 80%; float: left' >
 		<div style = 'width: 35%; float: left'>
 			<input type = 'button' value = 'Add PV' class = 'btn' id = 'addPv'>
-			<input type = 'button' value = 'Delete PV' class = 'btn' id = 'deletePv'> 
+			<input type = 'button' value = 'Delete PV' class = 'btn' id = 'deletePv'>
+			<input type = 'button' value = 'Delete All PV' class = 'btn' id = 'deleteAllPv'> 
 		</div>
-		<div style = 'width: 65%; float: left'>	
+		
+		<div style = 'width: 60%; float: left' align="right">	
 			<form action="csdApi/form/permissibleValues" method="post" enctype="multipart/form-data" id = 'permissibleValuesForm'>
 			   <label class = 'text_normal'>Select a File</label>
 			   <input type="file" name="file" id = 'fileID'/>
 			   <input type="submit" value="Upload" class = 'btn'/><img src = "csd_web/icons/loader.gif" id = "pvFileWaitingImage">
 		   	</form>
 		</div>
+		<div style = 'width: 5%; float: left' align="left">
+			<form name='downloadPVForm' method="post" id = 'downloadPVForm'>
+				<input type="hidden" name="pvControlName" id = 'pvControlName'/>
+			    <input type="hidden" name="pvs" id = 'pvs'/>
+				<!--input type="button" value="Download PVs" class = 'btn' onclick="getPVFile()"/-->
+				<img src = "images/de/download.bmp" id = "pvFileDownloadImage" title="Download Permissible Values" onclick="javascript:getPVFile()">
+			</form>
+		</div>		
 	</div>
-	
-	
