replaced download image with button. moved constant in front for comparison.

--- a/software/DynamicExtentions/src/csd_web/pages/templates/pvTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/pvTemplate.html
@@ -54,8 +54,8 @@
 			<form name='downloadPVForm' method="post" id = 'downloadPVForm'>
 				<input type="hidden" name="pvControlName" id = 'pvControlName'/>
 			    <input type="hidden" name="pvs" id = 'pvs'/>
-				<!--input type="button" value="Download PVs" class = 'btn' onclick="getPVFile()"/-->
-				<img src = "images/de/download.bmp" id = "pvFileDownloadImage" title="Download Permissible Values" onclick="javascript:getPVFile()">
+				<input type="button" value="Download PVs" class = 'btn' onclick="getPVFile()"/>
+				<!-- img src = "images/de/download.bmp" id = "pvFileDownloadImage" title="Download Permissible Values" onclick="javascript:getPVFile()"-->
 			</form>
 		</div>		
 	</div>
