--- a/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
+++ b/software/DynamicExtentions/src/csd_web/pages/templates/advancedPropertiesTemplate.html
@@ -132,7 +132,8 @@
 
 			<div id = "addSkipLogicBtnDiv" align = left style = 'padding : 15px; width : 80%; float : left;'>
 				<div align = right style = 'width : 40%'>
-					<input type = 'button' value = 'Add Skip Logic' class = 'button' style = 'width : 70%' id = "addSkipLogicBtn">
+					<input type = 'button' value = 'Add Skip Logic' class = 'button' style = 'width : 40%' id = "addSkipLogicBtn">
+					<input type = 'button' value = 'Cancel' class = 'button' style = 'width : 20%' id = "cancelSkipLogicBtn">
 				</div>
 			</div>
 			<div id = "skipLogicTableDiv" align = right style = 'padding : 15px; width : 80%; float : left; height:450px; overflow-y:auto;'>
@@ -168,8 +169,8 @@
 				<input type = 'button' value = 'Add Formula' class = 'button' style = 'width : 70%' id = "addFormulaBtn">
 			</div>
 			<div align = right style = 'width: 100% ;float : left;' ><br><br><br></div>
-			<div align = right style = 'width: 100%;float : left;' >
-				<table id = "formulaTable" style = "width: 100%;height:600px; overflow-y:auto;">
+			<div align = right style = 'width: 100%;float : left;height:450px; overflow-y:auto;' >
+				<table id = "formulaTable" style = "width: 100%;">
 					<tr id = "formulaTableHeader">
 						<td class = "formulaTableHeader text_bold">Operations</td>
 						<td class = "formulaTableHeader text_bold" >Calculated Field</td>
